--- a/.github/workflows/devsecops-workflow.yaml
+++ b/.github/workflows/devsecops-workflow.yaml
@@ -62,7 +62,7 @@ jobs:
           # The organization and project arguments (see /o and /k) are displayed
           # on the project dashboard in SonarCloud.
         run: |
-          .\.sonar\scanner\dotnet-sonarscanner begin /k:"javaprojectreachability" /o:"javaprojectreachability" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"Daniele-Puccio" /o:"devsecops-github-actions-all" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
           dotnet build SomeConsoleApplication.sln
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
   security:
@@ -70,7 +70,7 @@ jobs:
     needs: sonarcloud
     name: Run the SCA scan on the source code
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@main
       - name: RunSnyk to check for vulnerabilities
         uses: snyk/actions/dotnet@master
         continue-on-error: true
@@ -84,7 +84,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          ref: master
+          ref: main
       - name: ZAP Scan
         uses: zaproxy/action-baseline@v0.6.1
         with:
