--- a/.github/workflows/devsecops-workflow.yaml
+++ b/.github/workflows/devsecops-workflow.yaml
@@ -70,7 +70,7 @@ jobs:
     needs: sonarcloud
     name: Run the SCA scan on the source code
     steps:
-      - uses: actions/checkout@main
+      - uses: actions/checkout@master
       - name: RunSnyk to check for vulnerabilities
         uses: snyk/actions/dotnet@master
         continue-on-error: true
